[-] * Fixed invoking of CMake with output to custom directory.
[-] * Compile on platforms where ssize_t does not exist.
[-] * Fix detection of towlower on some compilers.
[-] * Make Bluetooth compile using BCC.
[-] * Fix compilation if strtoull does not exist.
[-] * Compile on platforms where intptr_t does not exist.
[-] * Fixed compilation in BCC (see changes above).

20081119 - 1.21.92

[-] * Reimplement locking and add tests for it.
[!] * GSM_SetDebugFileDescriptor now accepts flag whether file
      descriptor can be closed (bug #749).
[!] * Soname change due to API breakage (see above).
[-] * Fixed compilation on Mac OS X, thanks to Juan A. Bertolin for
      testing.
    
20081111 - 1.21.91

[+] * Script gammu-config can now also work with whiptail.
[-] * Minor fixes in gammu-config script.
[-] * Extra spaces from connection or device name are now stripped.
[-] * Automatically reinitialize FBUS connection if it is dropped.
[-] * Disable OBEX with Motorola Z6c, it is broken (bug #746).
[-] * Refresh manufacturer information on second init of AT (bug #746).
[-] * Always get charset information on AT phone initialization.
[-] * Better handling of OBEX switching for Siemens phones.
[-] * Fix flags for 2630 and 3109c (bug #752).
[-] * Fix handling of caller groups and picture IDs (bug #752).
[-] * Properly set calendar location while adding (bug #747).
    
20081020 - 1.21.90

[-] * Sign Windows binaries during build.
[-] * Detect long FM station names (bug #727).
[-] * Add ID for Nokia 2630b.
[-] * Handle properly very long lines in vcards (bug #728).
[-] * Do not build and install locales if gettext is not compiled.
[-] * Increase number of calendar entries (bug #725).
[-] * Leak free test runs.
[+] * Support backup of phone phonebook from Siemens (bug #732).
[+] * Properly handle GetNextMemory on Siemens (bug #732).
[+] * Save textual category to backup (bug #737).
[+] * Enable dashboard testing using CTest/CDash.
[+] * Add option to do coverage analysis.